--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
+  firebase_storage: ^11.7.4
   
   
 
