--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   firebase_core: ^2.30.1
   cloud_firestore: ^4.17.2
   firebase_storage: ^11.7.4
+  firebase_auth: ^4.19.5
   
   
 
